# timda_dual_arm_ROS2

./: .gitignore  README.md
linear_motion/: CMakeLists.txt  package.xml  slider_hardware.xml
linear_motion/include/linear_motion/: slide.h  slider_hardware.hpp  visiblity_control.h
linear_motion/src/: linear_z.cpp  slider_hardware.cpp
mir/mir_description/config/: caster_controllers.yaml  controllers.yaml
mir/mir_description/launch/: mir_display_launch.py  mir_launch.py
mir/mir_description/urdf/: mir.ros2_control.xacro
mir/mir_description/urdf/include/: caster.urdf.xacro
mobile_dual_arm_description/: CMakeLists.txt  package.xml
mobile_dual_arm_description/controllers/: controllers.yaml  left_controllers.yaml  right_controllers.yaml  sucker_controllers.yaml
mobile_dual_arm_description/launch/: display.launch.py  mobile_dual_arm.launch  mobile_dual_arm.launch.py  mobile_dual_arm.rviz  mobile_dual_arm_sucker.launch.py
mobile_dual_arm_description/urdf/: mobile_dual_arm copy.xacro  mobile_dual_arm.ros2_control.xacro  mobile_dual_arm.xacro  mobile_dual_arm_sucker.xacro
mobile_dual_arm_description/worlds/: mobile_dual_arm_object.world
mobile_dual_arm_no_tool_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mobile_dual_arm_no_tool_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mobile_dual_arm.ros2_control.xacro  mobile_dual_arm.srdf  mobile_dual_arm.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
mobile_dual_arm_no_tool_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
single_arm_description/: CMakeLists.txt  package.xml
single_arm_description/controllers/: controllers.yaml
single_arm_description/launch/: display.launch.py  single_arm.launch.py  single_arm.rviz
single_arm_description/urdf/: single_arm.ros2_control.xacro  single_arm.urdf.xacro  single_arm.xacro
slider_hardware/: CMakeLists.txt
slider_hardware/include/linear_motion/: slider_hardware.hpp
slider_hardware/src/: slider_hardware.cpp
suction_urdf/: CMakeLists.txt  package.xml
suction_urdf/urdf/: suction.ros2_control.xacro  suction_urdf.xacro
timda_body/: CMakeLists.txt  package.xml
timda_body/config/: timda_body_controller.yaml
timda_body/urdf/: timda_body.ros2_control.xacro  timda_body.xacro
